--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fontsource/plus-jakarta-sans": "^4.5.9",
-    "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.3",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
